WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275208
[InteractionRegions] Highlight container instead of shape when it can improve visibility
https://bugs.webkit.org/show_bug.cgi?id=275208
Summary
[InteractionRegions] Highlight container instead of shape when it can improve...
Etienne
Reported
2024-06-06 06:35:28 PDT
Highlight container instead of shape when it can improve visibility
Attachments
Add attachment
proposed patch, testcase, etc.
Etienne
Comment 1
2024-06-06 09:06:51 PDT
<
rdar://problem/128509643
>
Etienne
Comment 2
2024-06-06 09:07:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29580
EWS
Comment 3
2024-06-09 08:50:19 PDT
Committed
279859@main
(16668679e31c): <
https://commits.webkit.org/279859@main
> Reviewed commits have been landed. Closing PR #29580 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug