Source/WebCore/page/InteractionRegion.cpp
@@ -208,6 +208,20 @@ static bool hasTransparentContainerStyle(const RenderStyle& style)
             || !(style.borderTopWidth() && style.borderRightWidth() && style.borderBottomWidth() && style.borderLeftWidth()));
 }
 
+static bool usesFillColorWithExtremeLuminance(const RenderStyle& style)
+{
+    auto fillPaintType = style.fillPaintType();
+    if (fillPaintType != SVGPaintType::RGBColor && fillPaintType != SVGPaintType::CurrentColor)
+        return false;
+
+    auto fillColor = style.colorResolvingCurrentColor(style.fillPaintColor());
+
+    constexpr double luminanceThreshold = 0.01;
+
+    return fillColor.isValid()
+        && ((fillColor.luminance() < luminanceThreshold || std::abs(fillColor.luminance() - 1) < luminanceThreshold));
+}
+
 static bool isGuardContainer(const Element& element)
 {
     bool isButton = is<HTMLButtonElement>(element);
@@ -459,7 +473,9 @@ std::optional<InteractionRegion> interactionRegionForRenderedRegion(RenderObject
     float cornerRadius = 0;
     OptionSet<InteractionRegion::CornerMask> maskedCorners { };
     std::optional<Path> clipPath = std::nullopt;
-    RefPtr styleClipPath = regionRenderer.style().clipPath();
+
+    auto& style = regionRenderer.style();
+    RefPtr styleClipPath = style.clipPath();
 
     if (!hasRotationOrShear && styleClipPath && styleClipPath->type() == PathOperation::OperationType::Shape && originalElement) {
         auto size = boundingSize(regionRenderer, transform);
@@ -491,6 +507,15 @@ std::optional<InteractionRegion> interactionRegionForRenderedRegion(RenderObject
         auto shapeBoundingBox = shapeElement->getBBox(SVGLocatable::DisallowStyleUpdate);
         path.transform(viewBoxTransform);
         shapeBoundingBox = viewBoxTransform.mapRect(shapeBoundingBox);
+
+        constexpr float smallShapeDimension = 30;
+        bool shouldFallbackToContainerRegion = shapeBoundingBox.size().minDimension() < smallShapeDimension
+            && usesFillColorWithExtremeLuminance(style)
+            && matchedElementIsGuardContainer;
+
+        // Bail out, we'll convert the guard container to Interaction.
+        if (shouldFallbackToContainerRegion)
+            return std::nullopt;
 
         path.translate(FloatSize(-shapeBoundingBox.x(), -shapeBoundingBox.y()));
 
@@ -533,7 +558,6 @@ std::optional<InteractionRegion> interactionRegionForRenderedRegion(RenderObject
         }
     }
 
-    auto& style = regionRenderer.style();
     bool canTweakShape = !isPhoto
         && !clipPath
         && hasTransparentContainerStyle(style);
